# textdescriptives_app

./: README.md  app.py  data_viewer.py  environment.yaml  options.py  process_text.py  pyproject.toml  requirements.txt
src/: data_viewer.py  main.py  options.py
