[project]
name = "textdescriptives-app"
version = "0.1.0"
description = "Dashboard for extracting text metrics with TextDescriptives"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textdescriptives>=2.8.2",
    "gradio==5.50.0",
    "pandas",
    "pip",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0.tar.gz",
    "da-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/da_core_news_lg-3.8.0/da_core_news_lg-3.8.0.tar.gz",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
